# gka-contacts-qt

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
debian/: changelog  control  copyright
files/: CMakeLists.txt
files/desktop/: CMakeLists.txt  contacts.desktop.in
files/images/: CMakeLists.txt
po/: CMakeLists.txt  ar.po  de.po  el.po  es.po  fr.po  ga.po  gd.po  gka-contacts-qt.pot  ja.po  nb.po  ne.po  nl.po  ru.po  zh.po
qml/: CMakeLists.txt  ContactsItem.qml  ContactsView.qml  DeleteDialog.qml  EditContactDialog.qml  MainMenu.qml  PeopleListModel.qml  ZoomButton.qml  ZoomCalendar.qml  ZoomCheckBox.qml  ZoomLabel.qml  ZoomRadioButton.qml  ZoomTextFieldReadOnly.qml  dateExt.js  main.qml  urlType.js
src/: CMakeLists.txt  config.h.in  main.cpp
